# CollaborativeLocalization_3D_UAV

./: README.md
ardrone_autonomy/include/ardrone_autonomy/: ardrone_driver.h
ardrone_autonomy/launch/: ardrone.launch
ardrone_autonomy/src/: ardrone_driver.cpp
dot_finder/: CMakeLists.txt  package.xml
dot_finder/cfg/: DotFinder.cfg
dot_finder/include/dot_finder/: dot_finder_node.h
dot_finder/launch/: default.launch  twodrone.launch
dot_finder/src/: dot_finder_node.cpp
logger/: CMakeLists.txt  package.xml
logger/src/: pose_logger.cpp  transformed_pose_logger.cpp
particle_filter/: CMakeLists.txt  package.xml
particle_filter/include/particle_filter/: mutual_pose_estimation.h  particle_filter_node.h
particle_filter/src/: mutual_pose_estimation.cpp  particle_filter_node.cpp
tum_ardrone/flightPlans/: CL_king_HalfCircle.txt  CL_king_cross.txt  CL_king_cross_longer.txt  CL_king_lateral_indoor.txt  CL_king_long_lateral.txt  CL_king_rotate.txt  CL_king_spiral_indoor.txt  CL_king_spiral_outdoor.txt  CL_king_yaw_indoor.txt  CL_mamba.txt
tum_ardrone/launch/: ardrone_driver.launch
tum_ardrone/src/UINode/: main_GUI.cpp  tum_ardrone_gui.cpp  tum_ardrone_gui.h  tum_ardrone_gui.ui
